--- a/.env-example
+++ b/.env-example
@@ -1,18 +1,28 @@
 # Since .env is gitignored, you can use .env-example to build a new `.env` file when you clone the repo.
+
 # Keep this file up-to-date when you add new variables to `.env`.
 
 # This file will be committed to version control, so make sure not to have any secrets in it.
+
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
 # When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
 
 # Prisma
+
 DATABASE_URL= #used supabase (postgresql)
 
 # Next Auth
+
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:3000
 
-# Next Auth Discord Provider
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+# Next Auth Google Provider
+
+GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
+OAUTH_REDIRECT_URI=http://localhost:3000/api/auth/callback/google
+
+# Youtube Data Api
+
+YOUTUBE_API_KEY =
